--- a/src/scss/extra-small-mobile/six_box.scss
+++ b/src/scss/extra-small-mobile/six_box.scss
@@ -2,8 +2,10 @@
   .row {
     padding-left: 15px;
 
-    >p {
-      font-size: 11px;
+    .text-title {
+      font-size: 30px;
+      font-weight: 800;
+      margin-bottom: 30px;
     }
   }
 
@@ -12,20 +14,28 @@
     margin-bottom: 20px;
 
     .image-box {
-      width: 100%;
+      width: 121%;
+      margin-left: -15px;
     }
   }
 
   .list-style-plus {
     li {
       div {
-        margin-top: -14px;
+        margin-top: -25px;
+        
+        .text-color-light-gray {
+          color: #000;
+        }
+
         p, span {
-          font-size: 1rem;
+          font-size: 15px;
         }
 
         h5 {
           letter-spacing: 1px;
+          font-size: 16px;
+          margin-bottom: 10px!important;
         }
       }
       &:before {
