--- a/src/css/fourth_box.css
+++ b/src/css/fourth_box.css
@@ -1,3 +1,23 @@
+@media (max-width: 575.98px) {
+  .fourth-panel {
+    margin-top: 50px; } }
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .fourth-panel {
+    margin-top: 50px; } }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .fourth-panel {
+    margin-top: 100px; } }
+
+@media (min-width: 992px) and (max-width: 1419.98px) {
+  .fourth-panel {
+    margin-top: 150px; } }
+
+@media (min-width: 1420px) {
+  .fourth-panel {
+    margin-top: 160px; } }
+
 .fourth-panel .carousel-control-next,
 .fourth-panel .carousel-control-prev {
   top: 30%;
