--- a/src/css/second_box.css
+++ b/src/css/second_box.css
@@ -1,3 +1,23 @@
+@media (max-width: 575.98px) {
+  .second-panel {
+    margin-top: 50px; } }
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .second-panel {
+    margin-top: 50px; } }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .second-panel {
+    margin-top: 100px; } }
+
+@media (min-width: 992px) and (max-width: 1419.98px) {
+  .second-panel {
+    margin-top: 150px; } }
+
+@media (min-width: 1420px) {
+  .second-panel {
+    margin-top: 160px; } }
+
 .second-panel .text-color-purple {
   position: relative; }
   .second-panel .text-color-purple .text-border-purple {
@@ -7,7 +27,7 @@
     z-index: -100; }
 
 .second-panel .btn-gradient {
-  padding: 20px; }
+  padding: 30px; }
 
 .second-panel .card {
   border-radius: 0; }
