--- a/src/css/seventh_box.css
+++ b/src/css/seventh_box.css
@@ -1,3 +1,23 @@
+@media (max-width: 575.98px) {
+  .seventh-panel {
+    margin-top: 50px; } }
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .seventh-panel {
+    margin-top: 50px; } }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .seventh-panel {
+    margin-top: 100px; } }
+
+@media (min-width: 992px) and (max-width: 1419.98px) {
+  .seventh-panel {
+    margin-top: 150px; } }
+
+@media (min-width: 1420px) {
+  .seventh-panel {
+    margin-top: 160px; } }
+
 .seventh-panel .btn-registration .icon-sign-in {
   opacity: 0.6; }
 
