--- a/src/scss/desctop-1920/fifth_box.scss
+++ b/src/scss/desctop-1920/fifth_box.scss
@@ -6,10 +6,13 @@
   }
 
   .text-4 {
-    font-size: 6em;
+    font-size: 75px;
+    font-weight: 800;
+    margin-bottom: 30px;
 
     span {
-      font-size: 1em;
+      font-size: 75px;
+      font-weight: 800;
     }
   }
 
@@ -18,53 +21,62 @@
 
     span,
     h4 {
-      font-size: 1.4rem;
+      font-size: 50px;
     }
   }
 
   .presentation-box {
-    height: 250px;
+    margin-bottom: 30px;
 
     .left-side-box {
       .box-5-image {
-        width: 120%;
-        margin-left: -20%;
+        margin-left: -40%;
       }
-    }
-
-    p,
-    strong {
-      font-size: 1.3em;
     }
   }
 
   .row-list-item-problem {
-      position: relative;
+    position: relative;
+    margin-bottom: 30px;
 
-      .colored-rounds {
-        position: absolute;
-        top: 8px;
-        left: 0px;
-        width: 12px;
-        height: 12px;
-        border-radius: 10px;
-        background: $crimson;
-        display: inline-block;
+    h5 {
+      font-weight: 800;
+      font-size: 24px;
+    }
 
-        &+p {
-          font-size: 1rem;
-        }
+    .colored-rounds {
+      position: absolute;
+      top: 8px;
+      left: 0px;
+      width: 12px;
+      height: 12px;
+      border-radius: 10px;
+      background: $crimson;
+      display: inline-block;
+
+      &+p {
+        font-size: 15px;
       }
+    }
   }
 
   .text-resolve-problem{
     font-size: 1.5rem;
   }
 
+  .text-our-view {
+    margin-bottom: 30px;
+  }
+
+  .box-list-plus {
+    padding-right: 80px;
+  }
+
   .list-style-plus {
     margin-bottom: 30px;
     > li {
-      font-size: 1rem;
+      font-size: 15px;
+      margin-bottom: 20px;
     }
   }
 
@@ -76,7 +88,7 @@
     }
 
     .box-5-image {
-      width: 114%;
+      width: 133%;
     }
 
     .step-ico {
@@ -90,27 +102,29 @@
       }
 
       &.col-3,
-      &.col-lg-4 {
+      &.col-lg-4,
+      &.col-lg-6 {
         p.text-color-light-gray {
-          font-size: 0.66rem;
+          font-size: 13px;
         }
       }
 
       .title-step-ico {
-        font-size: 1rem;
+        font-size: 20px;
+        font-weight: bold;
       }
     }
 
     .line-ico {
       position: absolute;
-      width: 60px;
-      right: 10px;
+      width: 68px;
+      right: -25px;
       top: 0;
     }
 
     .text,
     strong {
-      font-size: 1.1rem;
+      font-size: 20px;
     }
   }
 }
