--- a/src/scss/desctop-1920/main-desctop.scss
+++ b/src/scss/desctop-1920/main-desctop.scss
@@ -10,18 +10,21 @@
 @import 'ninth_box';
 
 * {
-  font-size: 0.8rem;
+  font-size: 20px;
+}
+
+.container {
+  max-width: 1440px;
 }
 
 .header-panel {
-  max-height: 30%;
-  height: 750px;
+  height: 100vh;
 
   &>.row {
 
     .left-side-box {
       background: url("../../images/box-1-bg.png")no-repeat;
-      background-size: 110%;
+      background-size: 116%;
 
       .row {
         padding-left: 140px;
@@ -30,7 +33,8 @@
 
         .title-big-1 {
           font-size: 75px;
-          margin: 40px 0 20px;
+          margin: 40px 0 30px;
+          font-weight: 800;
 
           span {
             font-size: 75px;
@@ -40,6 +44,8 @@
         .btn-gradient {
           width: 250px;
           height: 60px;
+          margin-top: 30px;
+          padding-top: 15px;
         }
       }
     }
@@ -49,35 +55,15 @@
         bottom: 5%;
         right: 0;
         padding: 26px;
+        position: absolute;
 
-        @media (min-width: $desctop-start) and (max-width: 1060.98px) {
-          .king-size {
-            font-size: 7rem;
-            line-height: 8rem;
+        .king-size {
+          font-size: 125.54px;
+          line-height: 11rem;
+          font-weight: 900;
 
-            .who {
-              font-size: 11rem;
-            }
-          }
-
-          .btn-group {
-            margin-left: 23%;
-          }
-        }
-
-        @media (min-width: 1061px) {
-          .king-size {
-            font-size: 7.5rem;
-            line-height: 7.5rem;
-
-            .who {
-              font-size: 11rem;
-            }
-          }
-
-          .btn-group {
-            margin-left: 23%;
-            margin-top: 20px;
+          .who {
+            font-size: 11rem;
           }
         }
       }
@@ -85,12 +71,13 @@
   }
 
   .btn-bottom {
-    padding: 0 12% 0 6%;
+    padding: 0 12% 30px 6%;
     position: absolute;
     bottom: 20px;
 
     .btn-lang {
       background: transparent;
+      font-size: 24px;
     }
 
     .btn-group-sign-in {
@@ -98,6 +85,8 @@
 
       .btn {
         color: white;
+        font-size: 24px;
+        font-weight: 900;
 
         .icon:before {
           color: white;
@@ -111,22 +100,22 @@
     position: absolute;
     z-index: 10;
 
-    @media (min-width: $desctop-start) and (max-width: 1060.98px) {
-      max-width: 290px;
-      top: 100px;
-      right: -110px;
+    @media (min-width: 1420px) and (max-width: 1599.98px) {
+      max-width: 400px;
+      top: 146px;
+      right: -195px;
     }
 
-    @media (min-width: 1061px) and (max-width: $desctop-end) {
-      max-width: 310px;
-      top: 110px;
-      right: -130px;
+    @media (min-width: 1600px) and (max-width: 1919.98px) {
+      max-width: 530px;
+      top: 146px;
+      right: -250px;
     }
 
-    @media (min-width: $large-desctop) {
-      max-width: 380px;
-      top: 30px;
-      right: -170px;
+    @media (min-width: 1920px) {
+      max-width: 630px;
+      top: 146px;
+      right: -300px;
     }
   }
 }
@@ -134,6 +123,13 @@
 .footer-panel {
   .row {
     padding-left: 15px;
+  }
+
+  .we-are-in-app {
+    -ms-flex-align: start!important;
+    align-items: flex-start!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
   }
 
   .footer-contacts {
@@ -147,10 +143,12 @@
   .media-box {
     .text-color-light-gray {
       margin-bottom: 0.5rem;
+      font-size: 15px;
     }
 
-    .col-6 {
+    .col-12 {
       margin-right: 0.9rem;
+      margin-bottom: 20px;
 
       .views {
         font-size: 0.8rem;
@@ -171,4 +169,8 @@
 .logo {
   width: 176px;
   height: 176px;
+}
+
+.text-1 {
+  font-size: 75px;
 }
