--- a/src/scss/desctop-1920/ninth_box.scss
+++ b/src/scss/desctop-1920/ninth_box.scss
@@ -3,15 +3,20 @@
     padding-left: 15px;
 
     .text-color-light-gray {
-      font-size: 1.4em;
+      margin-bottom: 0;
+    }
+
+    &.box-title {
+      margin-bottom: 30px;
     }
   }
+
   .card {
     margin-bottom: 15px;
 
     .card-body {
       width: 100%;
-      height: 330px;
+      height: 515px;
       color: white;
 
       .card-text {
@@ -24,8 +29,14 @@
     }
   }
 
-  .btn-gradient-border {
-    background: transparent;
+  .box-video {
+    >div {
+      padding: 0;
+
+      &:first-child {
+        margin-right: 30px;
+      }
+    }
   }
 
   .news-1 {
