--- a/src/scss/desctop-1920/third_box.scss
+++ b/src/scss/desctop-1920/third_box.scss
@@ -1,28 +1,23 @@
 .third-panel {
   .left-side-box {
     .text-1 {
-      font-size: 9em;
-    }
-
-    p {
-      font-size: 1.5em;
+      font-size: 150px;
+      font-weight: 800;
     }
 
     .box-3-image {
-      width: 100%;
-      margin-bottom: 20px;
+      position: absolute;
+      left: -27%;
+      width: 120%;
     }
   }
 
   .right-side-box {
-    p,
-    strong {
-      font-size: 1.4em;
-    }
+    padding-left: 35px;
   }
 
   .text-3 {
-    font-size: 5em;
-    margin-top: 13px;
+    font-size: 75px;
+    margin-top: 28px;
   }
 }
