--- a/src/scss/extra-small-mobile/seventh_box.scss
+++ b/src/scss/extra-small-mobile/seventh_box.scss
@@ -4,17 +4,27 @@
   .row{
     padding-left: 15px;
 
-    &.d-flex {
+    &.title-box {
       .text-4 {
-        font-size: 3.5em;
+        font-size: 30px;
+        font-weight: 800;
 
         span {
-          font-size: 2.5rem;
+          font-size: 30px;
+          font-weight: 800;
+        }
+      }
+
+      &+div {
+        div {
+          padding-right: 0;
         }
       }
 
       p {
-        font-size: 1.5em;
+        font-size: 16px;
+        text-align: left!important;
+        margin-left: 0!important;
       }
     }
   }
@@ -22,26 +32,30 @@
   .box-image {
     img {
       width: 100%;
+      margin-bottom: 20px;
     }
   }
 
   .btn-registration {
-    margin-top: -15px;
+    margin-top: 0;
+    margin-left: 0!important;
   }
 
   .list-style-plus {
+    padding: 0 0 0 20px ;
+
     > li {
-      margin-bottom: 10px;
+      margin-bottom: 40px;
 
       div {
-        margin-top: -13px;
+        margin-top: -28px;
 
         p {
-          font-size: 12px;
+          font-size: 15px;
         }
 
         h5 {
-          letter-spacing: 1px;
+          font-size: 16px;
         }
       }
 
@@ -53,7 +67,7 @@
 
   .list-with-dashed {
     li {
-      font-size: 12px;
+      font-size: 15px;
     }
   }
 }
