--- a/src/scss/extra-small-mobile/third_box.scss
+++ b/src/scss/extra-small-mobile/third_box.scss
@@ -1,27 +1,29 @@
 .third-panel {
   .left-side-box {
     .text-1 {
-      font-size: 9em;
+      font-size: 30px;
     }
     .text-3 {
-      font-size: 5em;
-      margin-top: 13px;
+      font-size: 30px;
+      margin-top: 0;
     }
 
     p {
-      font-size: 1.5em;
+      margin-left: -40px;
     }
 
-    .box-3-image {
-      width: 100%;
-      margin-bottom: 20px;
-    }
-  }
+    .box-img {
+      height: 170px;
+      overflow: hidden;
+      margin-left: -10%;
+      width: 127%;
 
-  .right-side-box {
-    p,
-    strong {
-      font-size: 1.4em;
+      .box-3-image {
+        width: 110%;
+        margin-bottom: 20px;
+        margin-left: -10%;
+      }
     }
+
   }
 }
