--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -20,25 +20,17 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-quote1:before {
+.icon-quote:before {
   content: "\e90c";
   color: #523ab4;
-}
-.icon-vk .path1:before {
-  content: "\e90d";
-  color: rgb(77, 118, 161);
-}
-.icon-vk .path2:before {
-  content: "\e90e";
-  margin-left: -1em;
-  color: rgb(255, 255, 255);
+  font-size: 60px;
 }
 .icon-arrow-down:before {
   content: "\e900";
@@ -83,6 +75,7 @@
 }
 .icon-social-instagram:before {
   content: "\e909";
+  font-size: 30px;
 }
 .icon-social-twitter:before {
   content: "\e90a";
@@ -93,10 +86,59 @@
   color: #f61c0d;
 }
 .icon-plus:before {
-  content: "\ea0a";
+  content: "\1f302";
 }
 .icon-telegram:before {
   content: "\ea95";
+  color: rgb(77, 118, 161);
+  font-size: 30px;
+}
+.icon-button-close {
+  .path1 {
+    font-family: 'icon' !important;
+    font-size: 40px;
+
+    &:before {
+      content: "\e90f";
+      color: rgb(245, 85, 75);
+    }
+  }
+}
+.icon-button-close {
+  .path2 {
+    font-family: 'icon' !important;
+    font-size: 40px;
+
+    &:before {
+      content: "\e910";
+      margin-left: -1em;
+      color: rgb(255, 255, 255);
+    }
+  }
+}
+
+.icon-vk {
+  .path1 {
+    font-family: 'icon' !important;
+    font-size: 30px;
+
+    &:before {
+      content: "\e90d";
+      color: rgb(77, 118, 161);
+    }
+  }
+}
+.icon-vk {
+  .path2 {
+    font-family: 'icon' !important;
+    font-size: 30px;
+
+    &:before {
+      content: "\e90e";
+      margin-left: -1em;
+      color: rgb(255, 255, 255);
+    }
+  }
 }
 
 .list-style-plus {
@@ -104,7 +146,7 @@
     list-style-type: none;
 
     &:before {
-      content: "\ea0a";
+      content: "\1f302";
       font-family: 'icon' !important;
       color: $crimson;
       display: inline-block;
@@ -118,7 +160,7 @@
   &:before {
     font-family: 'icon' !important;
     position: absolute;
-    left: -70px;
+    left: -110px;
     @extend .icon-quote;
   }
 }
