--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 /*@import 'extra-small-mobile-direct-message';*/
 @import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,400,500,700,900&subset=cyrillic,cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&subset=cyrillic,cyrillic-ext');
 @import 'icons';
 //all panels
 @import 'second_box';
@@ -11,6 +11,7 @@
 @import 'seventh_box';
 @import 'eighth_box';
 @import 'ninth_box';
+@import 'modalHow';
 
 * {
     color: $main-color;
@@ -21,7 +22,7 @@ body {
     overflow-x: hidden;
 
     .container-fluid {
-        max-width: 1500px;
+        max-width: 1920px;
     }
 }
 
@@ -37,13 +38,13 @@ body {
     @import 'tablets/main-tablet';
  }
 
-@media (min-width: $desctop-start) {
+@media (min-width: $desctop-start) and (max-width: 1419.98px){
     @import 'desctop/main-desctop';
 }
-//
-//@media (min-width: $large-desctop) {
-//    @import 'desctop-1920/main-desctop';
-//}
+
+@media (min-width: 1420px) {
+    @import 'desctop-1920/main-desctop';
+}
 
 .header-panel {
     &>.row {
@@ -77,6 +78,8 @@ body {
 
 
 .footer-panel {
+    margin-top: 80px;
+
     .media-box {
         .icon-social-instagram {
             background: linear-gradient(to bottom right, $color-gradient-btn-start, $color-gradient-btn-finish);
@@ -235,4 +238,20 @@ a {
 
 .font-weight-semi-bold {
     font-weight: 600;
+}
+
+.btn-close-modal {
+    background: $close-btn-modal !important;
+    color: white;
+    border-radius: 50px !important;
+    opacity: 1 !important;
+    width: 50px;
+    height: 50px;
+    margin: 22px 22px 22px auto !important;
+    line-height: 0;
+
+    span {
+        color: white;
+        font-size: 16px !important;
+    }
 }
