--- a/src/scss/second_box.scss
+++ b/src/scss/second_box.scss
@@ -1,6 +1,26 @@
 @import 'variables';
 
 .second-panel {
+  @media (max-width: $extra-sm-mobile) {
+    margin-top: 50px;
+  }
+
+  @media (min-width: $land-mobile-start) and (max-width: $land-mobile-end) {
+    margin-top: 50px;
+  }
+
+  @media (min-width: $tablet-start) and (max-width: $tablet-end) {
+    margin-top: 100px;
+  }
+
+  @media (min-width: $desctop-start) and (max-width: 1419.98px){
+    margin-top: 150px;
+  }
+
+  @media (min-width: 1420px) {
+    margin-top: 160px;
+  }
+
   .text-color-purple {
     position: relative;
 
@@ -13,8 +33,9 @@
   }
 
   .btn-gradient {
-    padding: 20px;
+    padding: 30px;
   }
+
   .card {
     border-radius: 0;
   }
