--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,6 +11,7 @@ $color-gradient-header-srart-left: #975FE0;
 $color-gradient-header-srart-right: #975EE0;
 $color-gradient-header-finish-left: #4C4080;
 $color-gradient-header-finish-right: #4C3F81;
+$close-btn-modal: #F5554B;
 
 $extra-sm-mobile: 575.98px;
 
@@ -21,6 +22,6 @@ $tablet-start: 768px;
 $tablet-end: 991.98px;
 
 $desctop-start: 992px;
-$desctop-end: 1199.98px;
+$desctop-end: 1919.98px;
 
-$large-desctop: 1200px;
+$large-desctop: 1920px;
