--- a/src/scss/desctop/third_box.scss
+++ b/src/scss/desctop/third_box.scss
@@ -1,39 +1,23 @@
 .third-panel {
-  position: relative;
-
-
-  .row {
-    margin: 0;
-  }
-
   .left-side-box {
-    padding: 0 40px;
-    margin-right: 30px;
-
     .text-1 {
-      font-size: 90px;
-    }
-
-    p {
-      font-size: 18px;
+      font-size: 110px;
+      font-weight: 800;
     }
 
     .box-3-image {
-      width: 100%;
       position: absolute;
-      left: 0;
+      left: -27%;
+      width: 120%;
     }
   }
 
   .right-side-box {
-    p,
-    strong {
-      font-size: 16px;
-    }
+    padding-left: 35px;
   }
 
   .text-3 {
     font-size: 50px;
-    margin-top: 13px;
+    margin-top: 28px;
   }
 }
