--- a/src/scss/desctop-1920/fourth_box.scss
+++ b/src/scss/desctop-1920/fourth_box.scss
@@ -1,6 +1,11 @@
 @import '../variables';
 
 .fourth-panel {
+  &.container-fluid {
+    padding: 0 150px;
+    margin-top: 0;
+  }
+
   .text-4 {
     font-size: 75px;
     font-weight: 800;
@@ -10,11 +15,12 @@
       font-weight: 800;
     }
   }
+
   .carousel-control-next,
   .carousel-control-prev {
-    top: 250px;
-    width: 50px;
-    height: 50px;
+    top: 200px;
+    width: 70px;
+    height: 70px;
     border-radius: 2px !important;
   }
 
@@ -27,29 +33,38 @@
   }
 
   .carousel {
-    //padding: 0 7%;
 
     .carousel-item {
       > div {
         flex-direction: row!important;
         display: flex;
+
+        >div {
+            //padding-left: 18px;
+            //padding-right: 10px;
+          >div {
+            padding-left: 18px;
+            padding-right: 10px;
+          }
+        }
       }
 
       .text-name {
-        font-size: 2em;
+        font-size: 40px;
       }
+
       .position {
-        font-size: 1.1em;
+        font-size: 18px;
       }
       .description {
-        font-size: 1.2em;
+        font-size: 15px;
       }
 
       .box-item {
         position: relative;
 
         .quote-box {
-          bottom: 0;
+          margin-top: 3%;
 
           .icon-quote-box {
             width: 280px;
@@ -63,14 +78,13 @@
         }
       }
 
-
       .box-image {
         position: relative;
 
         .border-image {
           position: absolute;
           top: 10px;
-          left: -20px;
+          left: -25px;
           width: 250px;
           height: 370px;
           border: 1px solid rgba($crimson, 0.4);
