--- a/src/scss/desctop/fifth_box.scss
+++ b/src/scss/desctop/fifth_box.scss
@@ -7,9 +7,12 @@
 
   .text-4 {
     font-size: 50px;
+    font-weight: 800;
+    margin-bottom: 30px;
 
     span {
       font-size: 50px;
+      font-weight: 800;
     }
   }
 
@@ -20,43 +23,25 @@
     h4 {
       font-size: 32px;
     }
-
-    p {
-      font-size: 20px;
-    }
   }
 
   .presentation-box {
-    height: 405px;
+    margin-bottom: 30px;
 
     .left-side-box {
-      position: relative;
-
       .box-5-image {
-        position: absolute;
-        left: -501px;
-        height: 400px;
+        margin-left: -100%;
       }
-    }
-
-    p,
-    strong {
-      font-size: 20px;
-    }
-
-    .btn-gradient-border {
-      font-size: 18px;
-      width: 384px;
     }
   }
 
   .row-list-item-problem {
     position: relative;
-    margin-top: 53px;
+    margin-bottom: 30px;
 
-    .title-list {
-      font-weight: 600;
-      font-size: 20px;
+    h5 {
+      font-weight: 800;
+      font-size: 24px;
     }
 
     .colored-rounds {
@@ -73,49 +58,37 @@
         font-size: 15px;
       }
     }
-
-    &+.row {
-      .text-color-light-gray {
-        font-size: 22px;
-      }
-
-      &+.row {
-        .font-weight-bold {
-          font-size: 32px;
-        }
-      }
-    }
-  }
-
-  .font-weight-semi-bold {
-    font-size: 20px;
   }
 
   .text-resolve-problem{
     font-size: 1.5rem;
   }
 
+  .text-our-view {
+    margin-bottom: 30px;
+  }
+
+  .box-list-plus {
+    padding-right: 80px;
+  }
+
   .list-style-plus {
     margin-bottom: 30px;
-
     > li {
       font-size: 15px;
+      margin-bottom: 20px;
     }
   }
 
   .right-side-box {
     position: relative;
 
-    h5.font-weight-semi-bold {
-      font-size: 20px;
-
-      span {
-        font-size: 20px;
-      }
+    .font-weight-bold {
+      font-size: 1.1rem;
     }
 
     .box-5-image {
-      width: 114%;
+      width: 133%;
     }
 
     .step-ico {
@@ -128,28 +101,30 @@
         }
       }
 
-      &.col-3,
-      &.col-lg-4 {
+      &.col-11,
+      &.col-lg-5,
+      &.col-lg-6 {
         p.text-color-light-gray {
-          font-size: 0.66rem;
+          font-size: 13px;
         }
       }
 
       .title-step-ico {
-        font-size: 1rem;
+        font-size: 18px;
+        font-weight: bold;
       }
     }
 
     .line-ico {
       position: absolute;
-      width: 60px;
-      right: 10px;
+      width: 68px;
+      right: -45px;
       top: 0;
     }
 
     .text,
     strong {
-      font-size: 15px;
+      font-size: 20px;
     }
   }
 }
