--- a/src/scss/desctop/ninth_box.scss
+++ b/src/scss/desctop/ninth_box.scss
@@ -1,25 +1,48 @@
+@import "../variables";
 .ninth-panel {
   .row {
     padding-left: 15px;
 
     .text-color-light-gray {
-      font-size: 1.4em;
+      margin-bottom: 0;
+    }
+
+    &.box-title {
+      margin-bottom: 30px;
     }
   }
+
   .card {
     margin-bottom: 15px;
 
     .card-body {
       width: 100%;
-      height: 330px;
       color: white;
 
+      @media (min-width: $desctop-start) and (max-width: 1199.98px){
+        height: 345px;
+      }
+
+      @media (min-width: 1200px) {
+        height: 415px;
+      }
+
       .card-text {
-        font-size: 1.7rem;
+        font-size: 26px;
 
         span {
-          font-size: 1.7rem;
+          font-size: 26px;
         }
+      }
+    }
+  }
+
+  .box-video {
+    >div {
+      padding: 0;
+
+      &:first-child {
+        margin-right: 30px;
       }
     }
   }
