--- a/src/scss/desctop/second_box.scss
+++ b/src/scss/desctop/second_box.scss
@@ -10,23 +10,12 @@
 
   >.row {
     padding-left: 20px;
-
-    .text-1 {
-      font-size: 50px;
-
-      span {
-        font-size: 50px;
-      }
-    }
-
-    p,
-    strong {
-      font-size: 15px;
-    }
   }
 
-  .text-color-light-gray {
-    font-size: 16px;
+  .font-weight-bold {
+    span {
+      font-size: inherit;
+    }
   }
 
   .card-deck {
@@ -34,45 +23,54 @@
     margin-left: 0%;
 
     .card {
+
       &:first-child{
-        padding-right: 25px;
-        margin-right: 28px;
+        padding-right: 37px;
+        margin-right: 30px;
         margin-left: 0;
       }
 
       &:last-child {
-        padding-right: 4%;
+        padding-right: 5%;
         margin: 0;
+      }
+
+      &.card-bonus {
+        padding-right: 0;
+        padding-left: 0;
+      }
+
+      &.card-career {
+        padding-right: 0;
       }
     }
   }
 
-  .text-color-light-gray,
   .card-text {
-    font-size: 24px;
+    font-size: 15px;
     width: 80%;
   }
-
-  .collapse {
-    p,
-    strong {
-      font-size: 15px;
-    }
-  }
-
-  .card-toggle {
-    margin-left: -49px;
-
-    .card-body {
-      min-height: 180px;
-    }
+  .card-career .card-text{
+    width: 70%;
   }
 
   .card-title {
     font-size: 24px;
+    font-weight: 800;
+  }
+
+  .card-toggle {
+    margin-left: -30px;
+
+    .card-body {
+      min-height: 210px;
+    }
   }
 
   .toggle-element {
-    font-size: 10px;
+    p,
+    strong {
+      font-size: 15px;
+    }
   }
 }
