--- a/src/scss/desctop/six_box.scss
+++ b/src/scss/desctop/six_box.scss
@@ -1,54 +1,44 @@
 .sixth-panel {
+  .text-title {
+    font-weight: 800;
+    font-size: 50px;
+  }
   .row {
     padding-left: 15px;
+  }
 
-    .text-title {
-      font-size: 50px;
-    }
-
-    >p {
-      font-size: 20px;
-    }
+  br {
+    line-height: 1;
   }
 
   .right-side-box {
     padding-left: 0;
     margin-bottom: 20px;
-    position: relative;
-    height: 501px;
 
     .image-box {
-      position: absolute;
-      height: 501px;
-      left: -560px;
+      margin-left: -138%;
     }
   }
 
   .list-style-plus {
+    padding-left: 80px;
+
     li {
       div {
-        margin-top: -26px;
+        margin-top: -33px;
 
         p, span {
           font-size: 15px;
         }
 
         h5 {
-          letter-spacing: 1px;
-          font-size: 26px;
+          font-size: 20px;
         }
       }
-
       &:before {
-        text-indent: -30px;
-        font-weight: bold;
-        font-size: 16px;
+        text-indent: -40px;
       }
     }
-  }
-
-  .title-form {
-    font-size: 26px;
   }
 
   .form-contacts {
@@ -61,22 +51,22 @@
 
     .reverse-row {
       flex-direction: row-reverse;
-      padding-right: 9%;
+      padding-right: 7%;
 
       .col-lg-8 {
-        margin-right: 1.9rem;
-        flex: 0 0 70%;
+        margin-right: 1.8rem;
+        flex: 1 0 68%;
         max-width: 70%;
       }
 
       .col-lg-halg-3 {
-        flex: 0 0 27%;
-        max-width: 27%;
+        flex: 0 0 26%;
+        max-width: 36%;
       }
     }
 
     .btn-gradient-border {
-      height: 40px;
+      height: 50px;
       padding-top: 7px;
 
       .attach-file {
@@ -85,7 +75,7 @@
     }
 
     .form-text, .text-color-light-gray {
-      font-size: 1rem;
+      font-size: 15px;
     }
   }
 }
