--- a/src/scss/tablets/main-tablet.scss
+++ b/src/scss/tablets/main-tablet.scss
@@ -12,18 +12,20 @@
 
 
 * {
-  font-size: 1rem;
+  font-size: 18px;
 }
 
 .header-panel {
-  max-height: 30%;
-  height: 450px;
+  height: 100vh;
   margin-bottom: 90px;
+
+  .logo {
+    @extend .img-tablet-center;
+  }
 
   &>.row {
     .left-side-box {
-      //background: url("../../images/box-1-bg.png")no-repeat;
-      //background-size: 135%;
+      min-height: 400px;
 
       .row {
         padding:0 12%;
@@ -82,11 +84,18 @@
     padding-left: 15px;
   }
 
+  .we-are-in-app {
+    -ms-flex-align: start!important;
+    align-items: flex-start!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
+  }
+
   .footer-contacts {
-    font-size: 0.9rem;
+    font-size: 20px;
 
     span {
-      font-size: 0.9rem;
+      font-size: 20px;
     }
   }
 
@@ -95,7 +104,7 @@
       margin-bottom: 0.5rem;
     }
 
-    .col-6 {
+    .col-12 {
       margin-right: 0.9rem;
 
       .views {
@@ -109,7 +118,12 @@
     }
 
     .icon {
-      font-size: 1.3rem;
+      font-size: 18px;
+      padding: 17px 0;
+
+      &.icon-vk {
+        padding: 0;
+      }
     }
   }
 }
@@ -117,7 +131,6 @@
 .logo {
   width: 70px;
   height: 50px;
-  @extend .img-tablet-center;
 }
 
 .img-tablet-center {
